[tool.poetry]
name = "quisp-experiments"
version = "0.1.0"
description = ""
authors = ["zigen <hrlclb@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
quispr = { path = "./quispr", develop = true }
ipykernel = "^6.19.4"
pandas = "^2.0.0"
matplotlib = "^3.5.3"


[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
